update to work wih json and add start to gui